# doculyze

./: .gitignore  .gitmodules  README.md  package.json  pixi.toml  rct.config.json  tasktools.toml
.claude/: settings.json
dev/: tree.tree
docs/trust-generator-v3/: schema.py  tgv3_roadmap.md
doculyze/: pyproject.toml
doculyze/core/: pyproject.toml
doculyze/medscan/: pyproject.toml
doculyze/medscan/src/: analyze.py  common.py  extract.py  goo.py  main.py  medscan.py  platform.py  preprocess.py  typeshed.py  validate.py
scripts/tasktools/: install.bat  install.sh
