[project]
name    = "doculyze-core"
version = "0.0.1"

dependencies    = ["python-docx", "pydantic>=2", "reportlab", "pypdf>=4"]
requires-python = ">=3.12"

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/doculyze_core"]
